--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/application.css" media="screen" charset="utf-8">
   </head>
   <body>
+    <button type="button" name="button" onclick="toggleAnimation()">Toggle Animation</button>
     <canvas id="paper" resize="true" data-paper-resize="true">Loading...</canvas>
+    <p>To save your wallpaper: right click and select "Save image as..."</p>
 
     <script src='js/paper-full.min.js'></script>
     <script src="js/application.js"></script>
